# IDP-1000-04A

./: README.md
ESD Project/ImageSlideShow/: ImageSlide.uf2  README.md
ESD Project/ImageSlideShow/ESD Project/: App.main  AppScreen.page  DefaultTheme.theme  FirstPage.page  ImageSlide.esd  Usr_Page.page
ESD Project/ImageSlideShow/Exported Project/: CMakeLists.txt  README.md  pico_build.cmd
ESD Project/ImageSlideShow/Exported Project/Data/: barbecue.astc  chess.astc  diveevo.astc  fire.astc  keyboard.astc  locomotive.astc  person.astc  rose.astc  seagull.astc
ESD Project/ImageSlideShow/Exported Project/Esd_Core/: Esd_Context.c  Esd_Context.h
ESD Project/ImageSlideShow/Exported Project/FT_Eve_Hal/: EVE_CoCmd.c  EVE_CoCmd.h  EVE_CoCmd_IO.c  EVE_Config.h  EVE_GpuDefs.h  EVE_HalDefs.h  EVE_HalImpl_RP2040.c  EVE_Platform.h  EVE_Platform_RP2040.h  EVE_Util.c  EVE_Util.h  Gpu_Hal.h
ESD Project/ImageSlideShow/Exported Project/ImageSlide/: App__Generated.c  FirstPage.h  FirstPage__Generated.c  barbecue.c  chess.c  diveevo.c  fire.c  keyboard.c  locomotive.c  person.c  rose.c  seagull.c
ESD Project/ImageSlideShow/Exported Project/ThirdPartyLib/sd_driver/: hw_config.c
source/BSP/: CMakeLists.txt  README.md  bsp_test.c
source/BSP/drivers/: CMakeLists.txt
source/BSP/drivers/als/: CMakeLists.txt  als.c  als.h
source/BSP/drivers/efm8_mio/: CMakeLists.txt  efm8_mio.c  efm8_mio.h
source/BSP/drivers/eve_hal/: EVE_CoCmd.c  EVE_CoCmd_Widgets.c  EVE_Platform.h  EVE_Util.c  eve_app.h
source/BSP/drivers/i2c_utils/: i2c_utils.c  i2c_utils.h
source/BSP/drivers/led/: CMakeLists.txt  kinetic_rgb_colors.h  kinetic_rgb_led.c  kinetic_rgb_led.h  kinetic_rgb_led_registers.h  rgbled.c  rgbled.h
source/BSP/drivers/tof/: CMakeLists.txt  tof.c  tof.h
source/BSP/example_binary/: BSP_test.uf2
source/BSP/extras/: cli.h  cli_basic.c  cli_hwtests.c  cli_hwtests.h
source/BSP/include/: bridgetek_idp_1000_04a.h  bsp_debug.h  bsp_hwdefs.h  bsp_util.h
source/Default_firmware/: CMakeLists.txt  README.md  app.c
source/Default_firmware/eve_hal/: CMakeLists.txt  EVE_Cmd.c  EVE_CoCmd.h  EVE_CoCmd_IO.c  EVE_Config.h  EVE_GpuDefs.h  EVE_Hal.c  EVE_HalDefs.h  EVE_HalImpl_RP2040.c  EVE_LoadFile.h  EVE_LoadFile_FATFS.c  EVE_Platform.h  EVE_Util.h
source/Default_firmware/example_binary/: IDP-1000-04A.uf2  IDP2040_101A.uf2
source/Default_firmware/lib/: CMakeLists.txt
source/Default_firmware/lib/fatfs/source/: CMakeLists.txt
tool/eve_flash_pico/: README.md
